new bg, final corrections

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Apartmány Humenné - Kvalitné ubytovanie v centre mesta</title>
     <meta name="description" content="Kvalitné a cenovo dostupné ubytovanie v nových, plne vybavených apartmánoch v centre Humenného.">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="favicon16.png" sizes="16x16">  
-    <link rel="icon" type="image/png" href="favicon32.png" sizes="32x32">  
-    <link rel="icon" type="image/png" href="favicon96.png" sizes="96x96">  
+    <link rel="icon" type="image/png" href="favicon16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="favicon32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon96.png" sizes="96x96">
 </head>
 
 <body>
@@ -26,8 +26,12 @@
         </div>
         <div id="actualPhoto"></div>
         <div id="galleryNav">
-            <div id="galleryNavLeft" class="galleryNavigation"><span>&lt;</span></div>
-            <div id="galleryNavRight" class="galleryNavigation"><span>&gt;</span></div>
+            <div id="galleryNavLeft" class="galleryNavigation">
+                <span>&lt;</span>
+            </div>
+            <div id="galleryNavRight" class="galleryNavigation">
+                <span>&gt;</span>
+            </div>
         </div>
     </div>
 
@@ -94,84 +98,100 @@
                     <span class="sectionSubHeading">cena za 1 celý apartmán / 1 noc</span>
                 </h2>
                 <!-- JEDNOSPÁLŇOVÝ BYT -->
-                <div class="cennikByt">
-                    <div class="cennikHead">JEDNOSPÁLŇOVÝ (3 lôžka)</div>
-                    <div class="cenaContainer">
-                        <div class="polozkaCena">
-                            <div class="pocetOsob">1 - 2 osoby</div>
-                            <div class="cena">
-                                <span class="akcnaCena">35,00 &euro;</span>&nbsp;
-                                <span class="normalnaCena">40,00 &euro;</span>
+                <div class="bytContainer">
+                    <div class="cennikByt">
+                        <div class="cennikHead">JEDNOSPÁLŇOVÝ (3 lôžka)</div>
+                        <div class="cenaContainer">
+                            <div class="polozkaCena">
+                                <div class="pocetOsob">1 - 2 osoby</div>
+                                <div class="cena">
+                                    <span class="akcnaCena">35,00 &euro;</span>&nbsp;
+                                    <span class="normalnaCena">40,00 &euro;</span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="polozkaCena">
-                            <div class="pocetOsob">3 osoby</div>
-                            <div class="cena">
-                                <span class="akcnaCena">45,00 &euro;</span>&nbsp;
-                                <span class="normalnaCena">50,00 &euro;</span>
+                            <div class="polozkaCena">
+                                <div class="pocetOsob">3 osoby</div>
+                                <div class="cena">
+                                    <span class="akcnaCena">45,00 &euro;</span>&nbsp;
+                                    <span class="normalnaCena">50,00 &euro;</span>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <div class="vybavenie">
+                        <p>veľká 3-lôžková izba s TV a sedaciou súpravou, kuchyňa, kúpeľňa (sprchový kút, WC) </p>
+                    </div>
                 </div>
+
                 <!-- VIACSPÁLŇOVÝ BYT -->
-                <div class="cennikByt">
-                    <div class="cennikHead">VIACSPÁLŇOVÝ (5 + 1 lôžok)</div>
-                    <div class="cenaContainer">
-                        <div class="polozkaCena">
-                            <div class="pocetOsob">1 - 2 osoby</div>
-                            <div class="cena">
-                                <span class="akcnaCena">30,00 &euro;</span>&nbsp;
-                                <span class="normalnaCena">35,00 &euro;</span>
+                <div class="bytContainer">
+                    <div class="cennikByt">
+                        <div class="cennikHead">VIACSPÁLŇOVÝ (5 + 1 lôžok)</div>
+                        <div class="cenaContainer">
+                            <div class="polozkaCena">
+                                <div class="pocetOsob">1 - 2 osoby</div>
+                                <div class="cena">
+                                    <span class="akcnaCena">30,00 &euro;</span>&nbsp;
+                                    <span class="normalnaCena">35,00 &euro;</span>
+                                </div>
+                            </div>
+                            <div class="polozkaCena">
+                                <div class="pocetOsob">3 osoby</div>
+                                <div class="cena">
+                                    <span class="akcnaCena">40,00 &euro;</span>&nbsp;
+                                    <span class="normalnaCena">45,00 &euro;</span>
+                                </div>
+                            </div>
+                            <div class="polozkaCena">
+                                <div class="pocetOsob">4 osoby</div>
+                                <div class="cena">
+                                    <span class="akcnaCena">50,00 &euro;</span>&nbsp;
+                                    <span class="normalnaCena">55,00 &euro;</span>
+                                </div>
+                            </div>
+                            <div class="polozkaCena">
+                                <div class="pocetOsob">5 - 6 osôb</div>
+                                <div class="cena">
+                                    <span class="akcnaCena">60,00 &euro;</span>&nbsp;
+                                    <span class="normalnaCena">65,00 &euro;</span>
+                                </div>
                             </div>
                         </div>
-                        <div class="polozkaCena">
-                            <div class="pocetOsob">3 osoby</div>
-                            <div class="cena">
-                                <span class="akcnaCena">40,00 &euro;</span>&nbsp;
-                                <span class="normalnaCena">45,00 &euro;</span>
-                            </div>
-                        </div>
-                        <div class="polozkaCena">
-                            <div class="pocetOsob">4 osoby</div>
-                            <div class="cena">
-                                <span class="akcnaCena">50,00 &euro;</span>&nbsp;
-                                <span class="normalnaCena">55,00 &euro;</span>
-                            </div>
-                        </div>
-                        <div class="polozkaCena">
-                            <div class="pocetOsob">5 - 6 osôb</div>
-                            <div class="cena">
-                                <span class="akcnaCena">60,00 &euro;</span>&nbsp;
-                                <span class="normalnaCena">65,00 &euro;</span>
-                            </div>
-                        </div>
+                    </div>
+                    <div class="vybavenie">
+                        <p>2x 2-lôžková izba s TV, 1x 1-lôžková izba, prístelka, kuchyňa, kúpeľňa (vaňa, WC)</p>
                     </div>
                 </div>
                 <!-- PODKROVNÝ BYT -->
-                <div class="cennikByt">
-                    <div class="cennikHead">PODKROVNÝ (4 lôžka)</div>
-                    <div class="cenaContainer">
-                        <div class="polozkaCena">
-                            <div class="pocetOsob">1 - 2 osoby</div>
-                            <div class="cena">
-                                <span class="akcnaCena">35,00 &euro;</span>&nbsp;
-                                <span class="normalnaCena">40,00 &euro;</span>
+                <div class="bytContainer">
+                    <div class="cennikByt">
+                        <div class="cennikHead">PODKROVNÝ (4 lôžka)</div>
+                        <div class="cenaContainer">
+                            <div class="polozkaCena">
+                                <div class="pocetOsob">1 - 2 osoby</div>
+                                <div class="cena">
+                                    <span class="akcnaCena">35,00 &euro;</span>&nbsp;
+                                    <span class="normalnaCena">40,00 &euro;</span>
+                                </div>
+                            </div>
+                            <div class="polozkaCena">
+                                <div class="pocetOsob">3 osoby</div>
+                                <div class="cena">
+                                    <span class="akcnaCena">45,00 &euro;</span>&nbsp;
+                                    <span class="normalnaCena">50,00 &euro;</span>
+                                </div>
+                            </div>
+                            <div class="polozkaCena">
+                                <div class="pocetOsob">4 osoby</div>
+                                <div class="cena">
+                                    <span class="akcnaCena">55,00 &euro;</span>&nbsp;
+                                    <span class="normalnaCena">60,00 &euro;</span>
+                                </div>
                             </div>
                         </div>
-                        <div class="polozkaCena">
-                            <div class="pocetOsob">3 osoby</div>
-                            <div class="cena">
-                                <span class="akcnaCena">45,00 &euro;</span>&nbsp;
-                                <span class="normalnaCena">50,00 &euro;</span>
-                            </div>
-                        </div>
-                        <div class="polozkaCena">
-                            <div class="pocetOsob">4 osoby</div>
-                            <div class="cena">
-                                <span class="akcnaCena">55,00 &euro;</span>&nbsp;
-                                <span class="normalnaCena">60,00 &euro;</span>
-                            </div>
-                        </div>
+                    </div>
+                    <div class="vybavenie">
+                        <p>2x 2-lôžková izba s TV, prístelka, hala s TV a sedacou súpravou, kuchyňa, kúpeľňa (vaňa, WC)</p>
                     </div>
                 </div>
                 <div id="cenaDodatok">
@@ -202,7 +222,7 @@
                 <h2 class="sectionHeading">Galéria</h2>
                 <p id="galeriaHelpText">Po kliknutí na fotku sa zobrazí celá galéria.</p>
                 <div id="galeriaContainer">
-                   <div id="galeriaRow">
+                    <div id="galeriaRow">
                         <div class="galeriaColumn">
                             <img class="photo" src="images/photos-small/apartmany-humenne-2-small.jpg" alt="fotka-apartmany-humenné-2" id="photo_2">
                             <img class="photo" src="images/photos-small/apartmany-humenne-18-small.jpg" alt="fotka-apartmany-humenné-18" id="photo_18">
@@ -219,8 +239,8 @@
                             <img class="photo" src="images/photos-small/apartmany-humenne-21-small.jpg" alt="fotka-apartmany-humenné-21" id="photo_21">
                             <img class="photo" src="images/photos-small/apartmany-humenne-11-small.jpg" alt="fotka-apartmany-humenné-11" id="photo_11">
                         </div>
-                   </div>
-                </div>             
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -313,7 +333,7 @@
     <footer>
         <div id="footerContainer">
             <div id="footerLeft">
-                <p id="prevadzkovatel">Prevádzkovateľ:</p>
+                <p class="prevadzkovatel">Prevádzkovateľ</p>
                 <p>
                     AV+SV, s.r.o.
                     <br> Kukorelliho 1499/24
@@ -322,6 +342,14 @@
                 <p>
                     IČO: 44 225 482
                     <br> DIČ: 2022628212
+                </p>
+            </div>
+            <div id="footerCenter">
+                <p class="prevadzkovatel adresaFooter">Adresa prevádzy</p>
+                <p>
+                    BUNKER Pub Humenné
+                    <br> Kukorelliho 1503/42
+                    <br> 066 01 Humenné
                 </p>
             </div>
             <div id="footerRight">
