new bg, final corrections

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 </p>
             </div>
             <div id="footerCenter">
-                <p class="prevadzkovatel adresaFooter">Adresa prevádzy</p>
+                <p class="prevadzkovatel adresaFooter">Adresa prevádzky</p>
                 <p>
                     BUNKER Pub Humenné
                     <br> Kukorelliho 1503/42
