--- a/index.html
+++ b/index.html
@@ -37,16 +37,21 @@
 
 
     <!-- NAV MENU -->
-    <nav class="nav" id="myNav">
-        <div id="logo"></div>
-        <div class="navItem">
-            <a id="cennikNav">Cenník</a>
-        </div>
-        <div class="navItem">
-            <a id="galeriaNav">Galéria</a>
-        </div>
-        <div class="navItem">
-            <a id="kontaktNav">Kontakt</a>
+    <nav class="nav">
+        <div id="myNav">
+            <div class="navItem">
+                <a id="uvodNav">Úvod</a>
+            </div>
+            <div class="navItem">
+                <a id="cennikNav">Cenník</a>
+            </div>
+            <div id="logo"></div>
+            <div class="navItem">
+                <a id="galeriaNav">Galéria</a>
+            </div>
+            <div class="navItem">
+                <a id="kontaktNav">Kontakt</a>
+            </div>
         </div>
     </nav>
     <div id="arrowDown"></div>
