new dev enviroment

--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Apartmány Humenné - Kvalitné ubytovanie v centre mesta</title>
     <meta name="description" content="Kvalitné a cenovo dostupné ubytovanie v nových, plne vybavených apartmánoch v centre Humenného.">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="favicon16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="favicon32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="favicon96.png" sizes="96x96">
+
+    <link rel="icon" type="image/png" href="./images/favicons/favicon16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="./images/favicons/favicon32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="./images/favicons/favicon96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="./images/favicons/favicon128.png" sizes="128x128">
+    <link rel="icon" type="image/png" href="./images/favicons/favicon144.png" sizes="144x144">
+    <link rel="icon" type="image/png" href="./images/favicons/favicon196.png" sizes="196x196">
+    <link rel="icon" type="image/png" href="./images/favicons/favicon228.png" sizes="228x228">
+    <link rel="icon" type="image/png" href="./images/favicons/favicon310.png" sizes="310x310">
+    <link rel="apple-touch-icon" href="./images/favicons/favicon120.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicons/favicon180.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./images/favicons/favicon152.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="./images/favicons/favicon167.png">
+
+    <link rel="stylesheet" href="./css/style.css">    
 </head>
 
 <body>
@@ -68,7 +79,7 @@
         <div id="reservation">
             <p id="priceLandingPage">už od
                 <span id="price">10&euro;</span> osoba / noc</p>
-            <p id="phoneLandingPage">+421 918 405 730</p>
+            <p id="phoneLandingPage"><a href="tel:+421918405730"></a> +421 918 405 730</p>
         </div>
     </header>
 
@@ -368,7 +379,7 @@
         </div>
     </footer>
 
-    <script src="main.js" defer></script>
+    <script src="./js/index.js" defer></script>
 </body>
 
 </html>
