--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         </div>
     </footer>
 
-    <script src="./js/index.js" defer></script>
+    <script src="./js/index-min.js" defer></script>
 </body>
 
 </html>
