better scroll animation

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Apartmány Humenné - Kvalitné ubytovanie v centre mesta</title>
     <meta name="description" content="Kvalitné a cenovo dostupné ubytovanie v nových, plne vybavených apartmánoch v centre Humenného.">
 
-    <link rel="icon" type="image/png" href="./images/favicons/favicon16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="./images/favicons/favicon32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="./images/favicons/favicon96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="./images/favicons/favicon16-2.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="./images/favicons/favicon32-2.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="./images/favicons/favicon96-2.png" sizes="96x96">
     <link rel="icon" type="image/png" href="./images/favicons/favicon128.png" sizes="128x128">
     <link rel="icon" type="image/png" href="./images/favicons/favicon144.png" sizes="144x144">
     <link rel="icon" type="image/png" href="./images/favicons/favicon196.png" sizes="196x196">
@@ -44,6 +44,9 @@
                 <span>&gt;</span>
             </div>
         </div>
+    </div>
+    <div class="modal" id="loadingModal">
+        <h2>Loading Image Gallery</h2>
     </div>
 
 
