final after gallery

--- a/index.html
+++ b/index.html
@@ -378,17 +378,15 @@
             <div id="footerCenter">
                 <p class="prevadzkovatel adresaFooter">Adresa prevádzky</p>
                 <p>
-                    BUNKER Pub Humenné
-                    <br> Kukorelliho 1503/42
-                    <br> 066 01 Humenné
+                    BUNKER Pub Humenné<br>Kukorelliho 1503/42<br>066 01 Humenné
                 </p>
             </div>
             <div id="footerRight">
-                <p>Copyright &copy; 2017,
-                    <br>AV + SV, s.r.o.</p>
-                <p id="creatorContainer">CREATED BY:
-                    <br>
-                    <a id="creator" target="blank" href="https://sciranka.github.io">Peter Sciranka</a>
+                <p>
+                    Copyright &copy; 2017,<br>AV + SV, s.r.o.
+                </p>
+                <p id="creatorContainer">
+                    CREATED BY:<br><a id="creator" target="blank" href="https://sciranka.github.io">Peter Sciranka</a>
                 </p>
             </div>
         </div>
