--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Apartmány Humenné - Kvalitné ubytovanie v centre mesta</title>
     <meta name="description" content="Kvalitné a cenovo dostupné ubytovanie v nových, plne vybavených apartmánoch v centre Humenného.">
-
+    <!-- FAVICONS -->
     <link rel="icon" type="image/png" href="./images/favicons/favicon16-2.png" sizes="16x16">
     <link rel="icon" type="image/png" href="./images/favicons/favicon32-2.png" sizes="32x32">
     <link rel="icon" type="image/png" href="./images/favicons/favicon96-2.png" sizes="96x96">
@@ -20,7 +20,15 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./images/favicons/favicon180.png">
     <link rel="apple-touch-icon" sizes="152x152" href="./images/favicons/favicon152.png">
     <link rel="apple-touch-icon" sizes="167x167" href="./images/favicons/favicon167.png">
-
+    <!-- SOCIAL -->
+    <meta property="og:title" content="Apartmány Humenné">
+    <meta property="og:description" content="Kvalitné a cenovo dostupné ubytovanie v nových, plne vybavených apartmánoch v centre Humenného.">
+    <meta property="og:image" content="images/social.png">
+    <meta property="og:url" content="http://www.apartmanyhumenne.sk">
+    <meta name="twitter:card" content="summary_large_image">
+    <!-- FONT -> GOOGLE FONTS -> POPPINS 400, 600 -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,600&amp;subset=latin-ext" rel="stylesheet">
+    <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">    
 </head>
 
