--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- SOCIAL -->
     <meta property="og:title" content="Apartmány Humenné">
     <meta property="og:description" content="Kvalitné a cenovo dostupné ubytovanie v nových, plne vybavených apartmánoch v centre Humenného.">
-    <meta property="og:image" content="/images/social.png">
+    <meta property="og:image" content="./images/social.png">
     <meta property="og:url" content="http://www.apartmanyhumenne.sk">
     <meta name="twitter:card" content="summary_large_image">
     <!-- FONT -> GOOGLE FONTS -> POPPINS 400, 600 -->
