--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
             </div>
             <div id="footerRight">
                 <p>
-                    Copyright &copy; 2017,<br>AV + SV, s.r.o.
+                    Copyright &copy; 2012 - <span id="actualYear">2018</span>,<br>AV + SV, s.r.o.
                 </p>
                 <p id="creatorContainer">
                     CREATED BY:<br><a id="creator" target="blank" href="https://sciranka.github.io">Peter Sciranka</a>
