new key for map

--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
 </head>
 
 <body>
-
     <!-- GALLERY MODAL -->
-
     <div id="galleryModal">
         <span id="crossCloseGalleryModal">&times;</span>
         <div id="modalGalleryHeading">
@@ -91,8 +89,7 @@
         <div id="landingContainer">
             <h1 id="heading">Apartmány Humenné </h1>
             <h3 id="subHeading">
-                Najobľúbenejšie ubytovanie,
-                <br>priamo v centre mesta
+                Kvalitné ubytovanie, priamo v centre mesta
             </h3>
         </div>
         <div id="reservation">
@@ -120,7 +117,6 @@
                     <img src="images/icons/iconBath.png" alt="kúpeľňa ikona">
                     <img src="images/icons/iconFridge.png" alt="chladnička ikona">
                 </div>
-
             </div>
         </section>
 
@@ -273,61 +269,6 @@
                         <div class="galeriaColumn">
                             <img class="photo" src="images/photos-small/apartmany-humenne-21-small.jpg" alt="fotka-apartmany-humenné-21" id="photo_21">
                             <img class="photo" src="images/photos-small/apartmany-humenne-11-small.jpg" alt="fotka-apartmany-humenné-11" id="photo_11">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-
-        
-
-
-        <!-- HODNOTENIE ZAKAZNIKOV -->
-        <section id="hodnotenie">
-            <div class="sectionContainer">
-                <h2 class="sectionHeading">Povedali o nás</h2>
-                <div id="hodnotenieContainer">
-                    <div class="samotneHodnotenie">
-                        <div class="quoteSign">&#8220;</div>
-                        <div class="quoteHodnotenie">
-                            <blockquote>
-                                Veľmi príjemné ubytovanie, čisto, útulne, pohodlne. Všade blízko či do mesta, alebo k verejnej doprave ( vlak, autobus).
-                                Ideálny východiskový bod do okolia.
-                            </blockquote>
-                            <p class="menoHodnotenie"> - Jarmila -</p>
-                        </div>
-                    </div>
-                    <div class="samotneHodnotenie">
-                        <div class="quoteSign">&#8220;</div>
-                        <div class="quoteHodnotenie">
-                            <blockquote>
-                                Ochota a ústretovosť personálu, čistota, vybavenie, ubytovanie blízko železničnej stanice aj centra mesta. Určite využijeme
-                                v prípade potreby znovu.
-                            </blockquote>
-                            <p class="menoHodnotenie"> - Zuzana -</p>
-                        </div>
-                    </div>
-                    <div class="samotneHodnotenie">
-                        <div class="quoteSign">&#8220;</div>
-                        <div class="quoteHodnotenie">
-                            <blockquote>
-                                Prístup personálu bol veľmi profesionálny. Cítili sme sa veľmi dobre. Všetky spotrebiče boli fungujúce, vybavená kuchyňa,
-                                Wi-Fi signál, čistota priestorov, komfort a poloha. Navyše lokalita v centre mesta Humenné
-                                priniesla maximálnu spokojnosť.
-                            </blockquote>
-                            <p class="menoHodnotenie"> - Jana -</p>
-                        </div>
-                    </div>
-                    <div class="samotneHodnotenie">
-                        <div class="quoteSign">&#8220;</div>
-                        <div class="quoteHodnotenie">
-                            <blockquote>
-                                Pán ubytovateľ bol veľmi milý, flexibilný človek. Keď nás videl, že si nesieme spoločenský odev, opýtal sa nás na akú udalosť
-                                ideme a po našej odpovedi, že na svadbu, nám okamžite sám navrhol, že si môžeme dlhšie pospať
-                                a neskôr sa odubytovať.
-                            </blockquote>
-                            <p class="menoHodnotenie"> - Eva -</p>
                         </div>
                     </div>
                 </div>
