--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <!-- APARTMANY VYBAVENIE -->
         <section id="vybavenie" class="bg-gray">
             <div class="sectionContainer">
-                <h2 class="sectionHeading">Vybavenie aprtmánov</h2>
+                <h2 class="sectionHeading">Vybavenie apartmánov</h2>
                 <ul class="vybavenie-zoznam">
                     <li>televízor – káblový príjem TV</li>
                     <li>internet – WIFI</li>
