--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <span id="countActualPhoto"></span> /
                 <span id="countTotalPhotos"></span>
             </p>
-            <p id="modalPhotoDescription">Apartmán č. 1</p>
+            <p id="modalPhotoDescription"></p>
         </div>
         <!-- LOADING PICTURE SPINNER -->
         <div id="loadingModal">
@@ -97,7 +97,7 @@
             </h3>
         </div>
         <div id="reservation">
-            <p id="priceLandingPage">Rezervácie:</p>
+            <p id="priceLandingPage">Rezervácie na:</p>
             <div class="reservation-container">
                 <p id="phoneLandingPage"><a href="tel:+421918405730">+421 918 405 730</a></p>
                 <p id="emailLandingPage">info@apartmanyhumenne.sk</p>
@@ -116,7 +116,7 @@
                     <br> Každý apartmán disponuje vlastnou kúpeľňou (sprchový kút / vaňa), WiFi pripojením, TV, plne vybavenou
                     kuchyňou a je zariadený s dôrazom na pohodlie a kvalitný odpočinok.
                 </p>
-                <div id="iconContainer">
+                <div class="iconContainer">
                     <img src="images/icons/iconWiFi.png" alt="WiFi ikona">
                     <img src="images/icons/iconBed.png" alt="posteľ ikona">
                     <img src="images/icons/iconTV.png" alt="tv ikona">
@@ -131,11 +131,11 @@
             <div class="sectionContainer">
                 <h2 class="sectionHeading">Vybavenie apartmánov</h2>
                 <ul class="vybavenie-zoznam">
-                    <li>televízor – káblový príjem TV</li>
-                    <li>internet – WIFI</li>
-                    <li>izby – postele/prístelky, skrine, nočné stolíky, kreslá/stoličky, sedacie súpravy</li>
-                    <li>kúpeľňa – sprchový kút/vaňa, WC, umývadlo</li>
-                    <li>kuchyňa – plne vybavená kuchynská linka, jedálenský stôl, chladnička, elektrický sporák/indukčná platňa, mikrovlnná rúra, rýchlovarná kanvica</li>
+                    <li><span class="bold">televízor</span> – káblový príjem TV</li>
+                    <li><span class="bold">internet</span> – WIFI</li>
+                    <li><span class="bold">izby</span> – postele/prístelky, skrine, nočné stolíky, kreslá/stoličky, sedacie súpravy</li>
+                    <li><span class="bold">kúpeľňa</span> – sprchový kút/vaňa, WC, umývadlo</li>
+                    <li><span class="bold">kuchyňa</span> – plne vybavená kuchynská linka, jedálenský stôl, chladnička, elektrický sporák/indukčná platňa, mikrovlnná rúra, rýchlovarná kanvica</li>
                 </ul>
                 <h3 class="vybavenie-subheading">Na recepcii:</h3>
                 <ul class="vybavenie-zoznam">
@@ -144,6 +144,13 @@
                     <li>detská postieľka</li>
                 </ul>
                 <p class="bold">K dispozícii je taktiež úschovňa bicyklov / kočíkov.</p>
+                <div class="iconContainer text-center">
+                    <img src="images/icons/doska.png" alt="žehliaca doska ikona">
+                    <img src="images/icons/susic.png" alt="sušič na vlasy ikona">
+                    <img src="images/icons/postielka.png" alt="detská postieľka ikona">
+                    <img src="images/icons/bicykel.png" alt="bicykel ikona">
+                    <img src="images/icons/kocik.png" alt="kočík ikona">
+                </div>
             </div>
         </section>
 
