--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <p id="priceLandingPage">Rezervácie na:</p>
             <div class="reservation-container">
                 <p id="phoneLandingPage"><a href="tel:+421918405730">+421 918 405 730</a></p>
-                <p id="emailLandingPage">info@apartmanyhumenne.sk</p>
+                <p id="emailLandingPage"></p>
             </div>
         </div>
     </header>
